--- a/config.json
+++ b/config.json
@@ -147,6 +147,21 @@
       "name": "Filipe Deschamps",
       "url": "https://www.youtube.com/c/FilipeDeschamps",
       "avatar": "https://yt3.ggpht.com/ytc/AMLnZu9fwc9E-G17B2vMnbYzZBp_NYs4AmCE802y8x08=s88-c-k-c0x00ffffff-no-rj"
+    },
+    {
+      "name": "Rocketseat",
+      "url": "https://www.youtube.com/c/RocketSeat",
+      "avatar": "https://yt3.ggpht.com/ytc/AMLnZu9-n9mDtKOwVMx3_-2zr8H57lHFag5t-0JcJNFPUQ=s88-c-k-c0x00ffffff-no-rj"
+    },
+    {
+      "name": "Código Fonte TV",
+      "url": "https://www.youtube.com/c/codigofontetv",
+      "avatar": "https://yt3.ggpht.com/ytc/AMLnZu8lUVeJ1TiYevFOzZPNQFEQSDHc-TwiYKMcQpxpvA=s88-c-k-c0x00ffffff-no-rj"
+    },
+    {
+      "name": "Filipe Deschamps",
+      "url": "https://www.youtube.com/c/FilipeDeschamps",
+      "avatar": "https://yt3.ggpht.com/ytc/AMLnZu9fwc9E-G17B2vMnbYzZBp_NYs4AmCE802y8x08=s88-c-k-c0x00ffffff-no-rj"
     }
   ]
 }
