--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -17,7 +18,8 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "youtube-info": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
