--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.1",
+    "@supabase/supabase-js": "^2.1.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -18,12 +20,12 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4",
-    "youtube-info": "^1.3.2"
+    "typescript": "4.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
+    "prisma": "^4.6.1",
     "tailwindcss": "^3.2.2"
   }
 }
