--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "next": "12.3.1",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
