--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "environment.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/pages/api/revalidate.js"  ],
+, "src/pages/api/revalidate.ts"  ],
   "exclude": [
     "node_modules"
   ]
